fix for chat button on Safari

--- a/wp-content/themes/ideum/stylesheets/mixins/_banner.scss
+++ b/wp-content/themes/ideum/stylesheets/mixins/_banner.scss
@@ -19,3 +19,7 @@
 
   }
 }
+
+.chat .button {
+  margin: 0 auto;
+}
